syntax = "proto3";

package protos;
option go_package="/";

message Request {
    string name = 1;
}

message Response {
    string name = 1;
    int64 class = 2;
    int64 roll = 3;
}

service Datamock {
    rpc GetMockUserData(Request) returns (Response);
}