syntax = "proto3";

package orchestrator;
option go_package="/";

message Request {
    string name = 1;
}

message Response {
    string name = 1;
    int64 class = 2;
    int64 roll = 3;
}

service Orchestrator {
    rpc GetUserByName(Request) returns (Response);
    rpc GetUser(Request) returns (Response);
}